# lqtech_grpc_x3plus

./: .gitignore  README.md  notes.txt
cpp/grpc_x3plus/: CMakeLists.txt
cpp/route_guide/: CMakeLists.txt
cpp/route_guide/protos/: route_guide.proto
protos/: x3plus.proto
python/x3plus/: lqtech_client.py  lqtech_service.py  x3plus_pb2.py  x3plus_pb2.pyi  x3plus_pb2_grpc.py  x3plus_serial.py  x3plus_service_lqtech.py
